--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
         <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <!-- TODO : move API KEY TO .env -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmAcISYICCUrXDzJAkhxCPcvF0hkn6iUo"></script>
     </head>
 
     <body>
