--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,13 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <!-- TODO : move API KEY TO .env -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmAcISYICCUrXDzJAkhxCPcvF0hkn6iUo"></script>
-    </head>
+      <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+</head>
 
     <body>
         <app-root></app-root>
-    </body>
+      <noscript>Please enable JavaScript to continue using this application.</noscript>
+</body>
 
 </html>
